--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,49 @@ p {
   font-size: inherit;
 }
 
+
+
+/*Login Form*/
+/*          */
+#signin {
+  padding: 25px;
+}
+
+.input-field {
+  width: 85%;
+  margin: auto;
+}
+
+.input-field label {
+  color: white;
+}
+/*Autofill Overwrite*/
+@-webkit-keyframes autofill {
+    to {
+        color: white;
+        background: transparent;
+    }
+}
+
+input:-webkit-autofill {
+    -webkit-animation-name: autofill;
+    -webkit-animation-fill-mode: both;
+}
+
+#btnGoogle {
+  width: 191px;
+}
+
+.externalBtns {
+  padding-bottom: 15px;
+}
+
+.hide {
+  display: none;
+}
+
+
+/* Core CSS*/
 .content-box {
   color: white;
   width: 90%;
@@ -96,7 +139,8 @@ button {
   width: 60%;
   line-height: 3rem;
   font-size: 1.2rem;
-  background-color: #5c71f7;
+  /* background-color: #5c71f7; */
+  background-color: #324192;
 }
 
 .buttons-2 {
@@ -108,6 +152,8 @@ button {
   background-color: #7B46F9;
 } */
 
+
+/*Game Pages*/
 video {
   width: 70vw;
   margin: 0 auto;
