--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ nav svg {
     transform: translate(-50%, -50%);
 }
 
+h1, h2, h3 {
+  color: #f1a513;
+}
+
 p {
   line-height: 2rem;
 }
@@ -61,7 +65,14 @@ p {
 }
 
 .input-field label {
-  color: white;
+  color: #f1a513;
+}
+.input-field input:focus + label {
+  color: #f1a513 !important;
+}
+.input-field input:focus, .materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #f1a513 !important;
+  box-shadow: 0 1px 0 0 #f1a513 !important;
 }
 /*Autofill Overwrite*/
 @-webkit-keyframes autofill {
